Fix spacing

--- a/components/pricing_modal/downgrade_team_removal_modal/downgrade_team_removal_modal.scss
+++ b/components/pricing_modal/downgrade_team_removal_modal/downgrade_team_removal_modal.scss
@@ -96,6 +96,11 @@
                 max-height: 130px;
                 overflow-y: scroll !important;
             }
+
+            .DropDown__value-container {
+                padding-left: 0;
+                margin-left: 0;
+            }
         }
 
         .cta {
